# gate-keeper

./: .gitignore  .textlintignore  .textlintrc.json  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: backend-external.md  dogfooding.md  example-rules.md  gh-aw.md  issue-plan.md  llm-rubric.md  mvp-readiness.md  mvp-spec.md  rule-ir.md  semantic-rules.md
docs/design/: hybrid-rule.md  multi-target.md
docs/textlint/: ja-preset-evaluation.md  package-set.md  per-doc-type-policy.md  severity-policy.md
src/gate_keeper/: __init__.py  _md.py  classifier.py  cli.py  diagnostics.py  models.py  parser.py  validator.py
src/gate_keeper/backends/: __init__.py  _cli.py  _gh.py  _target.py  base.py  external.py  filesystem.py  github.py  llm_rubric.py
tests/: semantic_fixtures.py  test_classifier.py  test_cli.py  test_cli_compile.py  test_cli_explain.py  test_cli_runner.py  test_cli_validate.py  test_diagnostics.py  test_e2e_local.py  test_e2e_smoke.py  test_external_backend.py  test_filesystem_backend.py  test_gh_adapter.py  test_github_backend_stub.py  test_github_checks_success.py  test_github_independent_review.py  test_github_pr_state.py  test_github_threads.py  test_llm_rubric_backend.py  test_md.py  test_models.py  test_parser.py  test_semantic_fixtures.py  test_target_resolver.py  test_validator.py
tests/fixtures/filesystem/: content.txt  tasks_all_checked.md  tasks_none.md  tasks_with_unchecked.md
tests/fixtures/filesystem/nested/: deep.txt
tests/fixtures/ir/: diagnostic-mixed.json  rule-filesystem-text-required.json  rule-github-pr-open.json
tests/fixtures/local/: rules-local.md  rules-smoke.md
tests/fixtures/local/fail/: AGENTS.md  BANNED.txt  checklist.md  dirty.txt  tasks.md
tests/fixtures/local/pass/: AGENTS.md  README.md  checklist.md  manifest.txt  tasks.md
tests/fixtures/parser/: basic-rules.md  narrative-only.md  normative-paragraphs.md  pr-checklist.md
tests/fixtures/semantic/: README.md
tests/fixtures/validate/: rules-file-exists.md
(+30 files in other folders)
