[project]
name = "gate-keeper"
version = "0.1.0"
description = "Compile natural-language rules into verifiable local and GitHub checks."
readme = "README.md"
authors = [
    { name = "Tomoki Uda", email = "tomoki.uda@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.scripts]
gate-keeper = "gate_keeper.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.9",
    "pyright>=1.1",
]

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
